[gd_scene load_steps=4 format=3 uid="uid://dgrfxyqlp6rhh"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_05vjl"]
[ext_resource type="PackedScene" uid="uid://calta5b6add45" path="res://Scenes/Player.tscn" id="2_kdaxm"]
[ext_resource type="FontFile" uid="uid://b3a2j8uitem0t" path="res://Assets/Fonts/FredokaOne-Regular.ttf" id="3_38onj"]

[node name="MainScene" type="Node"]
script = ExtResource("1_05vjl")

[node name="Player" parent="." instance=ExtResource("2_kdaxm")]
position = Vector2(279, 705)
scale = Vector2(0.5, 0.5)

[node name="DebugLog" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="BlockSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -269.0
offset_right = 266.0
offset_bottom = 71.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 27.0
offset_right = -249.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_38onj")
theme_override_font_sizes/font_size = 35
text = "Score: 0"
vertical_alignment = 1

[node name="GameOverUI" type="Control" parent="."]
process_mode = 2
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -235.0
offset_right = 169.5
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_38onj")
theme_override_font_sizes/font_size = 65
text = "Try Again !"
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = 39.0
offset_right = 64.5
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_38onj")
theme_override_font_sizes/font_size = 45
text = "Retry"

[node name="MainMenuButton" type="Button" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = 226.0
offset_right = 122.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_38onj")
theme_override_font_sizes/font_size = 45
text = "Main Menu"

[connection signal="timeout" from="BlockSpawnTimer" to="." method="_on_block_spawn_timer_timeout"]
[connection signal="pressed" from="GameOverUI/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverUI/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
